--- a/_posts/2023-02-13-운영체제-소개_0.md
+++ b/_posts/2023-02-13-운영체제-소개_0.md
@@ -9,7 +9,7 @@
 # multiple category is not supported
 category: Operating System
 # multiple tag entries are possible
-tags: [Operating SystemPS]
+tags: [Operating System]
 # thumbnail image for post
 img: ":os-logo.png"
 # disable comments on this page
@@ -20,7 +20,7 @@ date: 2023-02-13 00:26:08 +0900
 ---
 <body>
   <a href="https://codex.cs.yale.edu/avi/os-book/OS10/index.html">
-      <img class="img-concert" src="https://codex.cs.yale.edu/avi/os-book/OS10/images/os10-cover.jpg" height="230" width="200"/>
+      <img src="https://codex.cs.yale.edu/avi/os-book/OS10/images/os10-cover.jpg" height="230" width="200"/>
   </a>
 </body>
 
