Fix: 쓰레드 작성 수정

--- a/_posts/2023-02-14-운영체제-쓰레드_3.md
+++ b/_posts/2023-02-14-운영체제-쓰레드_3.md
@@ -17,7 +17,7 @@ date: 2023-02-14 20:14:00 +0900
 
 #### 개요
 의미: CPU 활동의 기초적인 단위이다.   
-구성: thread ID, a program counter (PC), a register set, and a stack
+구성: thread ID, a program counter (PC), a register set, a stack
 
 같은 프로세스에 속하는 다른 쓰레드와 공유한다.
 예를 들어, code 영역, data 영역, and other operating-system 구성들 
@@ -54,24 +54,37 @@ date: 2023-02-14 20:14:00 +0900
 멀티 코어를 가진 시스템에서 동시성은 몇몇의 쓰레드가 병렬 처리하는 것을 의미한다. 왜냐하면 그 시스템은 각 코어에 쓰레드를 할당하기 때문이다.
 
 
-#### 프로그래밍의 난문
+
+### 프로그래밍의 난문
 존재하는 프로그램들을 수정과 더불어 멀티쓰레드가 된 새로운 프로그램들도 디자인 해야한다.
 
 
-1. `Identifying tasks`
+
+1. `Identifying tasks`  
+   
     This involves examining applications to find areas that can be divided into separate, concurrent tasks. Ideally, tasks are independent of one another and thus can run in parallel on individual cores.
-2. `Balance` 
+
+2. `Balance`  
+   
    While identifying tasks that can run in parallel, programmers must also ensure that the tasks perform equal work of equal value. In some instances, a certain task may not contribute as much value to the overall process as other tasks. Using a separate execution core to run that task may not be worth the cost.
-3. `Data splitting` 
+
+3. `Data splitting`  
+   
    Just as applications are divided into separate tasks, the data accessed and manipulated by the tasks must be divided to run on separate cores.
-4. `Data dependency` 
+4. `Data dependency`  
+   
    The data accessed by the tasks must be examined for dependencies between two or more tasks. When one task depends on data from another, programmers must ensure that the execution of the tasks is `synchronized` to accommodate the data dependency. We examine such strategies in Chapter 6.
-5. `Testing and debugging` 
+
+5. `Testing and debugging`   
+   
    When a program is running in parallel on multi- ple cores, many different execution paths are possible. Testing and debug- ging such concurrent programs is inherently more difficult than testing and debugging single-threaded applications.
 
 ### Parallelism 타입
-`Data parallelism`
+`Data parallelism`  
+
 각 코어에 같은 작업을 수행하고 멀티 컴퓨팅 코어를 지나는 같은 데이터의 부분 집합을 분배하는 것에 집중한다.
 가령 싱글 코어 시스템에서는 0~ N-1까지 다 더하는 연산을 하면 듀어 코어 시스템에서 [0]...[N/2 -1], [N/2]...[N -1]로 나누어서 팽행하게 작업한다.
+
 `Task parallelism`
+
  멀티 컴퓨팅 코어들을 지나는 데이터가 아닌 작업(쓰레드)들을 분배하는 것을 포함한다.
